@@ -1,4 +1,9 @@
-﻿shmuel 04.06.2015 21:57:25 +0200 - build 515
+﻿shmuel 15.06.2015 17:46:15 +0200 - build 516
+
+1. Пункты меню выбора макроса (выводимого, когда есть несколько макросов, назначенных на одно
+   кнопкосочетание) автоматически нумеруются, и их номера являются горячими клавишами.
+
+shmuel 04.06.2015 21:57:25 +0200 - build 515
 
 1. Вызов error() без параметра при загрузке макросов полностью нарушал эту самую загрузку.
 
